# forge-htmx

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deps.yml  test.yml
forgehtmx/: views.py
forgehtmx/static/htmx/: forgehtmx.js
forgehtmx/templates/htmx/: js.html
forgehtmx/templatetags/: htmx.py
scripts/: format  install  test
tests/: settings.py  test_core.py  test_views.py
